@@ -21,3 +21,10 @@ heartbeat.monitors:
 
   # Total test connection and data exchange timeout
   #timeout: 16s
+
+#==================== Elasticsearch template setting ==========================
+
+setup.template.settings:
+  index.number_of_shards: 1
+  index.codec: best_compression
+  #_source.enabled: false
